@@ -1,3 +1,5 @@
+* Don't deactivate payment wizard on invoice
+
 Version 2.2.0 - 2011-10-24
 * Bug fixes (see mercurial logs for details)
 
